--- a/tests/integration-tests/tests/iam/test_iam/test_iam_resource_prefix/user-role-iam-resource-prefix.cfn.yaml
+++ b/tests/integration-tests/tests/iam/test_iam/test_iam_resource_prefix/user-role-iam-resource-prefix.cfn.yaml
@@ -88,9 +88,6 @@ Resources:
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
             Effect: Allow
             Sid: IamRole
           - Action:
@@ -98,9 +95,6 @@ Resources:
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
             Effect: Allow
             Condition: !If
               - EnablePermissionsBoundary
@@ -115,9 +109,6 @@ Resources:
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
             Effect: Allow
             Sid: IamInlinePolicy
             Condition: !If
@@ -132,16 +123,11 @@ Resources:
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
             Condition:
               ArnLike:
                 iam:PolicyARN:
-                  - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/name-prefix-*
-#                  - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/parallelcluster*
-#                  - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/parallelcluster/*
-#                  - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/*/name-prefix-*
+#                  - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/name-prefix-*
+                  - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/name-prefix-*
                   - !Sub arn:${AWS::Partition}:iam::aws:policy/CloudWatchAgentServerPolicy
                   - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
                   - !Sub arn:${AWS::Partition}:iam::aws:policy/AWSBatchFullAccess
@@ -175,11 +161,6 @@ Resources:
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*'
-#              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*'
-#              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*'
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/name-prefix-*
             Effect: Allow
             Condition:
               StringEqualsIfExists:
@@ -394,22 +375,10 @@ Resources:
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/name-prefix-*
+#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/name-prefix-*
 #              Some of the Inline ParallelCluster Policies dont have a path
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/name-prefix-*
             Effect: Allow
             Sid: IamRead
           - Action:
@@ -419,10 +388,7 @@ Resources:
               - iam:RemoveRoleFromInstanceProfile
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/name-prefix-*
-              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/*
+              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/*
             Effect: Allow
             Sid: IamInstanceProfile
           - Action:
@@ -435,9 +401,7 @@ Resources:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
           
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
+
             Effect: Allow
             Condition:
               StringEqualsIfExists:
@@ -600,11 +564,6 @@ Resources:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/name-prefix-*
             Effect: Allow
           - Action:
               - cloudformation:*
@@ -711,11 +670,7 @@ Resources:
             Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
+              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/name-prefix-*
             Effect: Allow
           - Action:
               - iam:CreateInstanceProfile
@@ -728,11 +683,7 @@ Resources:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*/name-prefix-*
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/name-prefix-*
-              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/path-prefix/*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/*/name-prefix-*
-#              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/*
+              - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:instance-profile/path-prefix/*
             Effect: Allow
           - Action:
               - iam:CreatePolicy
@@ -748,10 +699,9 @@ Resources:
               - iam:TagPolicy
               - iam:UntagPolicy
             Resource: 
-              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/name-prefix-*'
-            #              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/parallelcluster/*'
-#              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/*/name-prefix-*'
-#              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/*'         
+#              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/path-prefix/name-prefix-*'
+              - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:policy/name-prefix-*'
+        
             Effect: Allow
           - Action:
               - ec2:Describe*
