--- a/tests/integration-tests/tests/schedulers/test_awsbatch/test_awsbatch/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_awsbatch/test_awsbatch/pcluster.config.yaml
@@ -22,10 +22,10 @@ Scheduling:
           # we usually use c4.xlarge and c5.xlarge for test, the min vcpus for one instance is 4.
           MinvCpus: 4
           DesiredvCpus: 8
-          MaxvCpus: 40
-          # EFS is integrated in order to exercise the mount_efs.sh script called from the
-          # entry point of the docker image generated when the scheduler is awsbatch.
+          MaxvCpus: 64
 SharedStorage:
+  # EFS is useful to exercise the mount_efs.sh script called from the
+  # entry point of the docker image generated when the scheduler is awsbatch.
   - MountDir: efs
     Name: efs
     StorageType: Efs
