Moves test_slurm_scaling to MultiAz configuration

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_scaling/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_scaling/pcluster.config.yaml
@@ -20,6 +20,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: dummy-1
           {% if scheduler == "plugin" %}
@@ -40,6 +41,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: dummy-2
           {% if scheduler == "plugin" %}
