Moves test_slurm_protected_mode to MultiAz configuration

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
@@ -18,6 +18,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: broken-static
           {% if scheduler == "plugin" %}
@@ -35,6 +36,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: broken-dynamic
           {% if scheduler == "plugin" %}
@@ -58,6 +60,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: normal
           {% if scheduler == "plugin" %}
