--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
@@ -18,6 +18,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       CustomActions:
         OnNodeStart:
           # pre-install script to make c5.large instance type instance has bootstrap error
@@ -40,6 +41,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       CustomActions:
         OnNodeStart:
           # pre-install script to make c5.large instance type instance has bootstrap error
@@ -70,6 +72,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       CustomActions:
         OnNodeStart:
           # pre-install script to make c5.large instance type instance has bootstrap error
