--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.yaml
@@ -18,6 +18,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: broken-static
           {% if scheduler == "plugin" %}
@@ -34,6 +35,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: broken-dynamic
           {% if scheduler == "plugin" %}
@@ -57,6 +59,7 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          - {{ private_az2_subnet_id }}
       ComputeResources:
         - Name: normal
           {% if scheduler == "plugin" %}
