Work in progress
Signed-off-by: David Pratt <davprat@amazon.com>

--- a/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_compute_console_logging/pcluster.config.yaml
+++ b/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_compute_console_logging/pcluster.config.yaml
@@ -7,6 +7,7 @@ HeadNode:
   Iam:
     AdditionalIamPolicies:
       - Policy: arn:aws:iam::aws:policy/AmazonSSMFullAccess
+      - Policy: arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
   Ssh:
     KeyName: {{ key_name }}
   Imds:
