[MultiAZ] Use multiaz config for slurm tests only

--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.broken.yaml
@@ -18,7 +18,9 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          {% if scheduler == "slurm" %}
           - {{ private_az2_subnet_id }}
+          {% endif %}
       CustomActions:
         OnNodeStart:
           # pre-install script to make c5.large instance type instance has bootstrap error
@@ -41,7 +43,9 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          {% if scheduler == "slurm" %}
           - {{ private_az2_subnet_id }}
+          {% endif %}
       CustomActions:
         OnNodeStart:
           # pre-install script to make c5.large instance type instance has bootstrap error
@@ -72,7 +76,9 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          {% if scheduler == "slurm" %}
           - {{ private_az2_subnet_id }}
+          {% endif %}
       CustomActions:
         OnNodeStart:
           # pre-install script to make c5.large instance type instance has bootstrap error
