--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_protected_mode/pcluster.config.recover.yaml
@@ -18,7 +18,9 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          {% if scheduler == "slurm" %}
           - {{ private_az2_subnet_id }}
+          {% endif %}
       ComputeResources:
         - Name: broken-static
           {% if scheduler == "plugin" %}
@@ -36,7 +38,9 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          {% if scheduler == "slurm" %}
           - {{ private_az2_subnet_id }}
+          {% endif %}
       ComputeResources:
         - Name: broken-dynamic
           {% if scheduler == "plugin" %}
@@ -60,7 +64,9 @@ Scheduling:
       Networking:
         SubnetIds:
           - {{ private_subnet_id }}
+          {% if scheduler == "slurm" %}
           - {{ private_az2_subnet_id }}
+          {% endif %}
       ComputeResources:
         - Name: normal
           {% if scheduler == "plugin" %}
