Permit SSH access from the bastion in tests using it
The access is by default limited to the instance launching the tests only.
With this patch we're permitting the bastion IP to access by SSH to the head node.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_private_subnet/pcluster.config.yaml
+++ b/tests/integration-tests/tests/networking/test_cluster_networking/test_cluster_in_private_subnet/pcluster.config.yaml
@@ -6,6 +6,7 @@ HeadNode:
     SubnetId: {{ private_subnet_id }}
   Ssh:
     KeyName: {{ key_name }}
+    AllowedIps: {{ bastion_ip }}/32
   Imds:
     Secured: {{ imds_secured }}
 Scheduling:
