--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ variables:
   INTEGRATION_ACCOUNT_ID: "459514386611"
   PRODUCTION_ACCOUNT_ID: "007425665442"
   IMAGE_NAME: aam-pcluster-manager
+  WORKING_DIR: cli
+  DOCKERFILE: api/client/docker/awslambda/Dockerfile
 
 .sandbox:
   variables:
@@ -90,9 +92,7 @@ variables:
   script:
     - ROLE=$CICD_ROLE
     - !reference [.ecr, login]
-    - BUILD_ARGS=$(test -e "./$WORKING_DIR/docker/args.sh" && sed 's@^@--build-arg @g' "./$WORKING_DIR/docker/args.sh" | tr "\n" " " || echo "")
-    - echo "$BUILD_ARGS"
-    - docker build $(echo $BUILD_ARGS) -f "./$WORKING_DIR/docker/Dockerfile" -t "${IMAGE_NAME}:latest" "./$WORKING_DIR/docker"
+    - docker build -f "$DOCKERFILE" -t "${IMAGE_NAME}:latest" "./$WORKING_DIR"
     - docker save "${IMAGE_NAME}:latest" > "${IMAGE_NAME}.tar"
   rules:
     - if: $CI_COMMIT_BRANCH || $CI_PIPELINE_SOURCE == "merge_request_event"
