--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -523,6 +523,12 @@ schedulers:
         instances:  {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["centos7", "ubuntu1804"]
         schedulers: ["slurm"]
+  test_slurm.py::test_slurm_reconfigure_race_condition:
+     dimensions:
+      - regions: ["af-south-1"]
+        instances: {{ common.INSTANCES_DEFAULT_X86 }}
+        oss: ["alinux2"]
+        schedulers: [ "slurm" ]
 spot:
   test_spot.py::test_spot_default:
     dimensions:
