--- a/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_console_output_with_monitoring_disabled/pcluster.config.yaml
+++ b/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_console_output_with_monitoring_disabled/pcluster.config.yaml
@@ -20,11 +20,11 @@ Scheduling:
         - Name: cit
           Instances:
             - InstanceType: {{ instance }}
-          MinCount: 1
+          MinCount: 0
           MaxCount: 10
       Networking:
         SubnetIds:
-          - {{ no_internet_subnet_id }}
+          - {{ private_subnet_id }}
       Iam:
         AdditionalIamPolicies:
           - Policy: arn:aws:iam::aws:policy/AmazonSSMFullAccess
@@ -32,5 +32,4 @@ Scheduling:
 Monitoring:
   Logs:
     CloudWatch:
-      Enabled: true
-      RetentionInDays: 14
+      Enabled: false
