--- a/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_monitoring_enabled_configures_console_output/pcluster.config.yaml
+++ b/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_monitoring_enabled_configures_console_output/pcluster.config.yaml
@@ -20,17 +20,12 @@ Scheduling:
         - Name: cit
           Instances:
             - InstanceType: {{ instance }}
-          MinCount: 1
+          MinCount: 0
           MaxCount: 10
       Networking:
         SubnetIds:
-          - {{ no_internet_subnet_id }}
+          - {{ private_subnet_id }}
       Iam:
         AdditionalIamPolicies:
           - Policy: arn:aws:iam::aws:policy/AmazonSSMFullAccess
           - Policy: arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
-Monitoring:
-  Logs:
-    CloudWatch:
-      Enabled: true
-      RetentionInDays: 14
