--- a/tests/integration-tests/configs/console_output.yaml
+++ b/tests/integration-tests/configs/console_output.yaml
@@ -2,24 +2,29 @@
 ---
 test-suites:
   cloudwatch_logging:
-#    test_compute_console_output_logging.py::test_compute_console_logging:
-#      dimensions:
-#        - regions: ["us-east-1"]
-##          oss: ["alinux2", "ubuntu2004", "centos7", "ubuntu1804"]
-#          oss: ["alinux2"]
-#          instances: ["t2.micro"]
-#          schedulers: ["slurm"]
-    test_compute_console_output_logging.py::test_console_output_with_monitoring_disabled:
+    test_compute_console_output_logging.py::test_compute_console_logging:
       dimensions:
         - regions: ["us-east-1"]
-#          oss: ["alinux2", "ubuntu2004", "centos7", "ubuntu1804"]
           oss: ["alinux2"]
           instances: ["c5.xlarge"]
           schedulers: ["slurm"]
-    test_compute_console_output_logging.py::test_monitoring_enabled_allows_console_output:
+        - regions: ["us-east-1"]
+          instances: {{ common.INSTANCES_DEFAULT_X86 }}
+          oss: {{ common.OSS_COMMERCIAL_X86 }}
+          schedulers: ["slurm"]
+        - regions: ["us-east-1"]
+          instances: {{ common.INSTANCES_DEFAULT_ARM }}
+          oss: {{ common.OSS_COMMERCIAL_ARM }}
+          schedulers: ["slurm"]
+    test_compute_console_output_logging.py::test_console_output_with_monitoring_disabled:
       dimensions:
         - regions: ["us-east-1"]
-#          oss: ["alinux2", "ubuntu2004", "centos7", "ubuntu1804"]
           oss: ["alinux2"]
+          instances: ["c5.xlarge"]
+          schedulers: ["slurm"]
+    test_compute_console_output_logging.py::test_monitoring_enabled_configures_console_output:
+      dimensions:
+        - regions: ["us-east-1"]
+          oss: ["ubuntu2004"]
           instances: ["c5.xlarge"]
           schedulers: ["slurm"]
