--- a/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_monitoring_enabled_configures_console_output/pcluster.config.yaml
+++ b/tests/integration-tests/tests/cloudwatch_logging/test_compute_console_output_logging/test_monitoring_enabled_configures_console_output/pcluster.config.yaml
@@ -15,7 +15,21 @@ HeadNode:
 Scheduling:
   Scheduler: {{ scheduler }}
   SlurmQueues:
-    - Name: compute
+    - Name: compute-a
+      ComputeResources:
+        - Name: cit
+          Instances:
+            - InstanceType: {{ instance }}
+          MinCount: 0
+          MaxCount: 10
+      Networking:
+        SubnetIds:
+          - {{ private_subnet_id }}
+      Iam:
+        AdditionalIamPolicies:
+          - Policy: arn:aws:iam::aws:policy/AmazonSSMFullAccess
+          - Policy: arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
+    - Name: compute-b
       ComputeResources:
         - Name: cit
           Instances:
