--- a/awsbatch-cli/.isort.cfg
+++ b/awsbatch-cli/.isort.cfg
@@ -10,3 +10,4 @@ known_third_party=boto3,botocore,awscli,tabulate,argparse,configparser,pytest,py
 # )
 multi_line_output=3
 include_trailing_comma=true
+profile=black
