--- a/cli/.isort.cfg
+++ b/cli/.isort.cfg
@@ -11,3 +11,4 @@ known_third_party=boto3,botocore,awscli,tabulate,argparse,configparser,pytest,py
 multi_line_output=3
 include_trailing_comma=true
 skip=pcluster/resources/custom_resources/custom_resources_code/crhelper
+profile=black
