Add log rotation parameter and validation
Configure log rotation for logs created by ParallelCluster to clean up old log files after it reach certain size.
Add the following configuration to cluster configuration:

Monitoring:
    CloudWatch:
      Enabled: false
    Rotation:
      Enabled: true
Add validator to print a warning message when Cloudwatch Enabled is set to false and Rotation is set to true: "Cloudwatch Logs is disabled but Log Rotation is enabled. Logs will be rotated and removed from the cluster once they reach a certain size. If you want to keep logs locally within the cluster, please set Monitoring / Logs / Rotation / Enabled to false.

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/cli/tests/pcluster/templates/test_cluster_stack/test_cluster_config_limits/slurm.full.all_resources.yaml
+++ b/cli/tests/pcluster/templates/test_cluster_stack/test_cluster_config_limits/slurm.full.all_resources.yaml
@@ -235,6 +235,8 @@ Monitoring:
       Enabled: true
       RetentionInDays: 30
       DeletionPolicy: Retain
+    Rotation:
+      Enabled: true
   Dashboards:
     CloudWatch:
       Enabled: true
