--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -202,6 +202,8 @@ Monitoring:
       Enabled: true  # true
       RetentionInDays: 30  # 14
       DeletionPolicy: Retain
+    Rotation:
+      Enabled: true
   Dashboards:
     CloudWatch:
       Enabled: true  # true
